# trading-system

./: .gitignore  CONTRIBUTING.md  DISCLAIMER.md  LICENSE  README.md  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: ci.yml
configs/: sample-config.yml
data/: sample-holdings.json  sample.yaml
docs/: TECH_DESIGN_REQUIREMENTS.md  WORKFLOW.md
docs/stories/: INDEX.md  S-00.md  S-01.md  S-02.md  S-03.md  S-04.md  S-05.md  S-06.md  S-07.md  S-08.md  S-09.md  S-10.md  S-11.md  S-12.md  S-13.md  S-14.md
docs/trading guid book/: Quantitative_Trading_Learning_and_Implementation_Plan.md
scripts/: __init__.py  tooling.py
src/trading_system/: __init__.py  cli.py  config.py  notify.py  orchestrator.py  preprocess.py  rules.py
src/trading_system/backtest/: __init__.py
src/trading_system/data/: __init__.py  provider.py  service.py  storage.py  yahoo.py
src/trading_system/observability/: __init__.py  logging.py  manifest.py
src/trading_system/rebalance/: __init__.py
src/trading_system/report/: __init__.py
src/trading_system/risk/: __init__.py
src/trading_system/signals/: __init__.py
stories/: README.md
tests/: test_backtest.py  test_cli.py  test_config.py  test_data_provider.py  test_notify.py  test_observability.py  test_orchestrator.py  test_preprocessor.py  test_rebalance.py  test_report.py  test_risk.py  test_signals.py
