[project]
name = "trading-system"
version = "0.1.0"
description = "Research and alerting toolkit for a mid/long-horizon trading strategy."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Quant Team", email = "quant@example.com" }]
requires-python = ">=3.11,<4.0"
dependencies = [
    "numpy >=2.1.1,<3.0",
    "pandas >=2.2,<3.0",
    "pyarrow >=21.0,<22.0",
    "matplotlib >=3.9,<4.0",
    "plotly >=5.23,<6.0",
    "pydantic >=2.8,<3.0",
    "Jinja2 >=3.1,<4.0",
    "pyyaml >=6.0,<7.0",
    "typer[all] >=0.12.3,<0.13",
    "rich >=13.7,<14.0",
    "pytest >=8.3,<9.0",
    "click <8.2",
    "yfinance (>=0.2.43,<0.3)",
]

[tool.poetry]
packages = [
    { include = "trading_system", from = "src" },
    { include = "scripts" },
]

[tool.poetry.group.dev.dependencies]
black = "^24.4"
ruff = "^0.6"
mypy = "^1.10"
pytest-cov = "^5.0"
types-pyyaml = "^6.0"
pandas-stubs = "^2.2"

[project.scripts]
ts = "trading_system.cli:main"
lint = "scripts.tooling:lint"
fmt = "scripts.tooling:format_code"
typecheck = "scripts.tooling:typecheck"
tests = "scripts.tooling:tests"
ci = "scripts.tooling:ci"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = ["src"]

[[tool.mypy.overrides]]
module = ["yfinance"]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra"
testpaths = ["tests"]
